--- a/hello/sub1/layout9.html
+++ b/hello/sub1/layout9.html
@@ -74,8 +74,12 @@
         background-color: green;
       }
 
+      /* 
+      flex 요소로서 여기서 부터
+      오른쪽 정렬하기
+      */
       nav li:nth-child(4) {
-        margin: 0 auto;
+        margin-left: auto;
       }
 
       section {
