--- a/HTML_020_flex_layout/layout_05.html
+++ b/HTML_020_flex_layout/layout_05.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
+    <link href="../reset.css" ref="stylesheet" />
     <style>
       * {
         box-sizing: border-box;
