--- a/HTML_050_background/index.html
+++ b/HTML_050_background/index.html
@@ -12,6 +12,45 @@
         padding: 0;
       }
 
+      nav#main_nav {
+        /* 화면의 특정한 위치에 강제 고정하기 */
+        /* top, left, bottom, right 를 이용하여 고정할수 있다 */
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        background-color: green;
+        display: flex;
+      }
+
+      nav#main_nav h1 {
+        color: white;
+        font-size: 40px;
+        font-weight: 900;
+        padding: 12px 5px 5px 20px;
+      }
+
+      nav#main_nav ul {
+        /* 
+          container를 flex로 하고 child의
+          margin-left :auto로 설정하면
+          flex box내에서 오른쪽 정렬이 된다
+        */
+        margin-left: auto;
+        list-style: none;
+        display: flex;
+        color: white;
+      }
+
+      nav#main_nav li {
+        padding: 22px 15px 20px 15px;
+        cursor: pointer;
+      }
+
+      nav#main_nav li:hover {
+        background-color: rgba(0, 0, 0, 0.3);
+      }
+
       section#contents {
         font-size: 80px;
         text-align: center;
@@ -87,16 +126,18 @@
         }
       }
     </style>
+    <script src="js/main_nav.js"></script>
   </head>
   <body>
     <nav id="main_nav">
+      <h1>I'm Developer</h1>
       <ul>
-        <li><a href="#art1">THINK</a></li>
-        <li><a href="#art2">RAISE</a></li>
-        <li><a href="#art3">LIFE</a></li>
-        <li><a href="#art4">WANT</a></li>
-        <li><a href="#art5">TIME</a></li>
-        <li><a href="#art6">DESTINY</a></li>
+        <li class="art1">THINK</li>
+        <li class="art2">RAISE</li>
+        <li class="art3">LIFE</li>
+        <li class="art4">WANT</li>
+        <li class="art5">TIME</li>
+        <li class="art6">DESTINY</li>
       </ul>
     </nav>
     <section id="contents">
