--- a/HTML_050_background/index.html
+++ b/HTML_050_background/index.html
@@ -12,127 +12,20 @@
         padding: 0;
       }
 
-      nav#main_nav {
-        /* 화면의 특정한 위치에 강제 고정하기 */
-        /* top, left, bottom, right 를 이용하여 고정할수 있다 */
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        background-color: green;
-        display: flex;
-      }
-
-      nav#main_nav h1 {
-        color: white;
-        font-size: 40px;
-        font-weight: 900;
-        padding: 12px 5px 5px 20px;
-      }
-
-      nav#main_nav ul {
-        /* 
-          container를 flex로 하고 child의
-          margin-left :auto로 설정하면
-          flex box내에서 오른쪽 정렬이 된다
-        */
-        margin-left: auto;
+      li {
         list-style: none;
-        display: flex;
-        color: white;
-      }
-
-      nav#main_nav li {
-        padding: 22px 15px 20px 15px;
-        cursor: pointer;
-      }
-
-      nav#main_nav li:hover {
-        background-color: rgba(0, 0, 0, 0.3);
-      }
-
-      section#contents {
-        font-size: 80px;
-        text-align: center;
-        font-weight: 800;
-        text-transform: uppercase;
-        color: white;
-        text-shadow: 1px 1px 1px black;
-      }
-
-      section#contents article {
-        /*
-            화면에 box를 표현할때
-            width, height등을 사용한다
-            보통은 %, px 단위를 사용한다
-            width값은 100% 등 % 단위의 설정이 쉽다
-            height값은 % 단위의 설정이 다소 까다로웠다
-            vh wh 라는 단위가 나오면서
-                % 단위의 단점을 보완 하고 있다
-                vh : view port height 의 비례
-                wh : view port width 의 비례
-                화면의 해상도와 관계없이
-                보있는 화면 그대로의 모습의 비례
-          */
-        height: 100vh;
-        /* 
-        글자(Text)의 height를 
-        view port 100%로 설정 
-        text-aligh : 가로방향 정렬
-        vertical-align : 세로방향 정렬
-            text의 font, style에 따라서 상당이
-            불편한 설정이 된다
-        
-            세로방향으로 text를 중앙에 위치하기가
-            상당히 번거로운 작업이 필요했다
-            box의 중앙에 한라인의 text를 위치하고 싶을때는
-            line-height를 box의 크기만큼 설정해주면
-            text가 box 세로 중앙에 위치하더라
-        */
-        line-height: 100vh;
-        background-size: cover;
-        background-attachment: fixed;
-      }
-
-      article#art1 {
-        background: url("images/images_7.jpg") no-repeat;
-        background-image: url("images/images_7.jpg");
-        background-repeat: no-repeat;
-      }
-      article#art2 {
-        background: url("images/images_2.jpg") no-repeat;
-      }
-      article#art3 {
-        background: url("images/images_3.jpg") no-repeat;
-      }
-      article#art4 {
-        background: url("images/images_4.jpg") no-repeat;
-      }
-      article#art5 {
-        background: url("images/images_5.jpg") no-repeat;
-      }
-      article#art6 {
-        background: url("images/images_6.jpg") no-repeat;
-      }
-
-      @media screen and (max-width: 1000px) {
-        section#contents {
-          font-size: 50px;
-        }
-      }
-      @media screen and (max-width: 800px) {
-        section#contents {
-          font-size: 30px;
-        }
       }
     </style>
+    <link href="css/section.css" rel="stylesheet" />
+    <link href="css/main_nav.css" rel="stylesheet" />
+    <link href="css/dot_nav.css" rel="stylesheet" />
     <script src="js/main_nav.js"></script>
   </head>
   <body>
     <nav id="main_nav">
       <h1>I'm Developer</h1>
       <ul>
-        <li class="art1">THINK</li>
+        <li class="art1 active">THINK</li>
         <li class="art2">RAISE</li>
         <li class="art3">LIFE</li>
         <li class="art4">WANT</li>
@@ -140,6 +33,18 @@
         <li class="art6">DESTINY</li>
       </ul>
     </nav>
+
+    <nav id="dot_nav">
+      <ul>
+        <li class="art1 active"><span>THINK</span></li>
+        <li class="art2"><span>RAISE</span></li>
+        <li class="art3"><span>LIFE</span></li>
+        <li class="art4"><span>WANT</span></li>
+        <li class="art5"><span>TIME</span></li>
+        <li class="art6"><span>DESTINY</span></li>
+      </ul>
+    </nav>
+
     <section id="contents">
       <article id="art1">Think Diffent</article>
       <article id="art2">Raise Your Head</article>
