--- a/HTML_050_Dynamic_HTML/dynamic_02.html
+++ b/HTML_050_Dynamic_HTML/dynamic_02.html
@@ -34,5 +34,56 @@
     /*
       위에 보이는 table을 JS 코드를 사용하여 만드시오
       */
+
+    const doc = document;
+    let table = doc.createElement("table");
+    let tr1 = doc.createElement("tr");
+    let td1 = doc.createElement("td");
+    td1.innerHTML = "이름";
+
+    let td2 = doc.createElement("td");
+    td2.innerHTML = "전화번호";
+
+    let td3 = doc.createElement("td");
+    td3.innerHTML = "주소";
+
+    tr1.appendChild(td1);
+    tr1.appendChild(td2);
+    tr1.appendChild(td3);
+
+    table.appendChild(tr1);
+
+    let tr2 = doc.createElement("tr");
+
+    let tr21 = doc.createElement("td");
+    tr21.innerHTML = "홍기동";
+    tr2.appendChild(tr21);
+
+    let tr22 = doc.createElement("td");
+    tr22.innerHTML = "010-111";
+    tr2.appendChild(tr22);
+
+    let tr23 = doc.createElement("td");
+    tr23.innerHTML = "서울시";
+    tr2.appendChild(tr23);
+
+    table.appendChild(tr2);
+
+    document.querySelector("body").appendChild(table);
+
+    // js 배열을 사용하여
+    const titles = ["이름", "전화번호", "주소"];
+    const data = ["홍길동", "010", "서울시"];
+
+    let table1 = doc.createElement("table");
+
+    let tr = doc.createElement("tr");
+    for (let i = 0; i < titles.length; i++) {
+      let td = doc.createElement("td");
+      td.innerHTML = titles[i];
+      tr.appendChild(td);
+    }
+    table1.appendChild(tr);
+    doc.querySelector("body").appendChild(table1);
   </script>
 </html>
