--- a/HTML_060_slide/slide_01.html
+++ b/HTML_060_slide/slide_01.html
@@ -49,7 +49,7 @@
         border: 1px solid red;
         display: flex;
 
-        animation: myslide 20s linear infinite;
+        animation: myslide 5s ease-in-out infinite;
       }
 
       div.main div.images img {
